<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="40dp"
    android:paddingLeft="40dp"
    android:gravity="center"
    android:background="@drawable/main_background"
    tools:context="com.luckycode.zombieattack.ui.activity.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/textView2" />

    <Button
        android:text="@string/sign_upp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:onClick="userRegister"
        android:layout_marginTop="38dp"
        style="@style/Widget.AppCompat.Button"

        android:background="@drawable/dialog_button_selector"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"
        android:layout_below="@+id/userPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="normal|bold"
        android:textSize="36sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        android:layout_marginTop="50dp"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:background="@drawable/dialog_edittext"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColorHint="@color/colorPrimaryDark"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/userName"
        android:hint="@string/nickname"
        android:textColor="@color/black"
        android:background="@drawable/dialog_edittext"
        android:layout_marginTop="50dp"
        android:layout_alignTop="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColorHint="@color/colorPrimaryDark"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:background="@drawable/dialog_edittext"
        android:id="@+id/userPassword"
        android:password="true"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:layout_alignTop="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/colorPrimaryDark"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textColor="@color/black"
        android:background="@drawable/dialog_edittext"
        android:id="@+id/email"
        android:hint="@string/email"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_marginTop="50dp"
        android:layout_alignTop="@+id/userName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/already_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLogin"
        android:clickable="true"
        android:onClick="userLogin"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="21dp"
        android:layout_alignBottom="@+id/textView2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>