<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingRight="30dp"
    android:paddingLeft="30dp"
    android:background="@drawable/main_background"
    android:weightSum="1"
    >

    <TextView
        android:text="@string/settings"
        android:textSize="35dp"
        android:paddingTop="50dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/setting"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:id="@+id/imageView3" />

    <CheckedTextView
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="20dp"
        android:text="@string/music"
        android:checked="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/music"
        android:paddingBottom="20dp"/>

    <CheckedTextView
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="20dp"
        android:text="@string/vibration"
        android:checked="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:id="@+id/vibration" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_weight="0.07">

        <TextView
            android:text="@string/search_radius"
            android:paddingTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight=".9"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight=".1"
            android:id="@+id/numberPicker">
        </NumberPicker>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:id="@+id/signOut"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:paddingTop="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/account"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp"
            android:textColor="@color/yellow"
            android:textSize="13dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ok"
            android:id="@+id/ok"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:layout_weight="0.5"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/close"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:id="@+id/exitSettings"
            android:layout_weight=".5"
            />


    </LinearLayout>


</LinearLayout>